   useful for applications using wxPython.
 + Fix a buffer overrun in the bootloader (which could lead to a crash)
   when the built executable is run from within a deep directory (more than
   70-80 characters in the pathname).
 * Bootstrap modules are now compressed in the executable (so that they
   are not visible in plaintext by just looking at it with a hex editor).


PyInstaller 1.2
---------------
 + Fix a crash when invoking UPX with certain kinds of builds.
 + Fix icon support by re-adding a resource section in the bootloader
   executable.


PyInstaller 1.1
---------------

 + (Windows) Make single-file packages not depend on MSVCRT71.DLL anymore,
   even under Python 2.4. You can eventually ship your programs really as
   single-file executables, even when using the newest Python version!
 + Fix problem with incorrect python path detection. Now using helpers from
   distutils.
 + Fix problem with rare encodings introduced in newer Python versions: now all
   the encodings are automatically found and included, so this problem should
   be gone forever.
 + Fix building of COM servers (was broken in 1.0 because of the new build
   system).
 + Mimic Python 2.4 behaviour with broken imports: sys.modules is cleaned up
   afterwise. This allows to package SQLObject applications under Windows
   with Python 2.4 and above.
 + Add import hook for the following packages:
     + GTK
     + PyOpenGL (tested 2.0.1.09)
     + dsnpython (tested 1.3.4)
     + KInterasDB (courtesy of Eugene Prigorodov)
 + Fix packaging of code using "time.strptime" under Python 2.3+.
 + (Linux) Ignore linux-gate.so while calculating dependencies (fix provided
   by Vikram Aggarwal).
 + (Windows) With Python 2.4, setup UPX properly so to be able to compress
   binaries generated with Visual Studio .NET 2003 (such as most of the
   extensions). UPX 1.92+ is needed for this.


PyInstaller 1.0 (with respect to McMillan's Python Installer 5b5):
---------------
